# china-stock-data-source

./: .gitignore  AI_INTEGRATION_QUICK_REFERENCE.md  AI_QUICK_START.md  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  health_check.py  install.py  pyproject.toml  quick_start.py  requirements.txt  requirements_full.txt  setup.py
examples/: ai_model_integration.py  quantitative_trading_example.py
src/: __init__.py  abu_source.py  ashare_source.py  quant_adapters.py  unified_data_source.py
tests/: test_unified_data_source.py
